@@ -4,6 +4,8 @@
     - make the list context warning in param show the filename rather than
       the package so we have more information on exactly where the warning
       has been raised from (GH #171)
+    - correct self_url when PATH_INFO and SCRIPT_NAME are the same but we
+      are not running under IIS (GH #176)
 
     [ DOCUMENTATION ]
     - Fix some typos (GH #173, GH #174)
